[package]
name = "temperature_control_system"
version = "0.1.0"
authors = ["Ruben Villalvazo <ruben.villalvazo_manr@hotmail.com>"]
edition = "2021"
repository = "https://github.com/rubenVillalvazo/temperature_control_system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]